--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
 															<form id="form-edit">
 																			<input placeholder="img" name="img" class="form-control mt-3 border-black" type="text" />
 																			<input placeholder="title" name="title" class="form-control mt-3 border-black" type="text" />
+																			<input placeholder="description" name="description" class="form-control mt-3 border-black" type="text" />
 																			<input placeholder="real_price" name="real_price" class="form-control mt-3 border-black" type="text" />
-																			<input placeholder="discount_price" name="discount_price" class="form-control mt-3 border-black" type="text" />
-																			<input placeholder="monthly" name="monthly" class="form-control mt-3 border-black" type="text" />
+																			<input placeholder="category" name="category" class="form-control mt-3 border-black" type="text" />
 															</form>
 											</div>
 											<div class="modal-footer">
